fix(numerictextbox): icons are not vertically aligned

--- a/packages/default/scss/common/_forms.scss
+++ b/packages/default/scss/common/_forms.scss
@@ -162,6 +162,7 @@
             .k-icon {
                 height: 100%;
                 overflow: hidden;
+                vertical-align: baseline;
             }
         }
 
